--- a/_sass/layout/_l-map.scss
+++ b/_sass/layout/_l-map.scss
@@ -17,11 +17,18 @@
 
   .btn-share {
     position: absolute;
+    // display: -webkit-box;
+    // display: -ms-flexbox;
+    // display: flex;
+    // -webkit-flex-wrap: wrap;
+    // /* NEW */
+    // -webkit-box-pack: center;
+    // -ms-flex-pack: center;
+    // justify-content: center;
+    // -webkit-justify-content: center;
+    // align-items: center;
     top: rem(135px);
     right: rem(15px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     z-index: 20;
     width: rem(40px);
     height: rem(40px);
@@ -38,6 +45,10 @@
       width: rem(15px);
       height: rem(15px);
       fill: $color-5;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      position: absolute;
     }
 
     @media screen and (min-width: 768px) {
